Fix UI: body tag (overflow)

--- a/react/mock-project-frontend/src/pages/manager-appraiser-list/ManagerAppraiserList.css
+++ b/react/mock-project-frontend/src/pages/manager-appraiser-list/ManagerAppraiserList.css
@@ -11,6 +11,6 @@
     background-color: #3b82f6;
 }
 
-body {
+/* body {
     overflow: hidden;
-}
+} */
